@@ -78,14 +78,16 @@ XSParagraph_la_CFLAGS = $(PERL_CONF_ccflags)
 
 XSParagraph_la_CFLAGS += -DVERSION=\"$(VERSION)\" -DXS_VERSION=\"$(XSPARAGRAPH_INTERFACE_VERSION)\"  "-I$(PERL_INC)"
 
-XSParagraph_la_LDFLAGS=-avoid-version -module $(PERL_CONF_cccdlflags)
+XSParagraph_la_LDFLAGS=-no-undefined -avoid-version -module $(PERL_CONF_cccdlflags)
+# The -no-undefined flag is for MS-Windows.  See info node
+# `(gnulib)Libtool and Windows'.
 
 
 TestXS_la_CFLAGS = $(PERL_CONF_ccflags)
 
 TestXS_la_CFLAGS += -DVERSION=\"$(VERSION)\" -DXS_VERSION=\"$(VERSION)\"  "-I$(PERL_INC)"
 
-TestXS_la_LDFLAGS=-module $(PERL_CONF_cccdlflags)
+TestXS_la_LDFLAGS=-no-undefined -module $(PERL_CONF_cccdlflags)
 
 # only used to regenerate a stand-alone perl module
 perl_specific_files = \
